Fix CORS config