@@ -17,6 +17,7 @@ import org.springframework.web.cors.CorsConfiguration; // Import this
 import org.springframework.web.cors.CorsConfigurationSource; // Import this
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource; // Import this
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -50,13 +51,12 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // Allow the Frontend URL (usually localhost:3000 for React or 4200 for Angular)
-        // You can use List.of("*") to allow EVERYONE (Development only)
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:4200", "http://localhost:5173"));
-
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        // 1. اسمح لأي دومين يكلمك (عشان الفرونت إند والـ Swagger)
+        configuration.setAllowedOrigins(Arrays.asList("*"));
+        // 2. اسمح بكل أنواع الطلبات
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // 3. اسمح بكل الـ Headers (عشان التوكن)
+        configuration.setAllowedHeaders(Arrays.asList("*"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
